# scanner-in-haskell

./: .gitignore  README.md  scanner.cabal
app/: Main.hs
scripts/: smoke-test.sh
